Day 3 almost complete

--- a/Day-02/last5sites/last5places.html
+++ b/Day-02/last5sites/last5places.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <div id = "siteList">
+        <div id = "siteList" class = "sites">
             <!-- The last 5 sites are added here -->
         </div>
     </body>
 </html>
+
+<script src="last5places.js"></script>
