Fixed Some Errors and Restructured Folders

--- a/Day-02/last5sites/popup/last5places.html
+++ b/Day-02/last5sites/popup/last5places.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<meta charset="UTF-8"> 
 <html>
     <body>
         <div id = "siteList" class = "sites">
             <!-- The last 5 sites are added here -->
         </div>
+        
+    <script src="last5places.js"></script>
     </body>
 </html>
-
-<script src="last5places.js"></script>
