--- a/Day-02/last5sites/popup/last5places.html
+++ b/Day-02/last5sites/popup/last5places.html
@@ -2,9 +2,9 @@
 <meta charset="UTF-8"> 
 <html>
     <body>
-        <div id = "siteList" class = "sites">
-            <!-- The last 5 sites are added here -->
-        </div>
+        <ul id = "siteList" class = "siteListClass">
+            <!-- List comes here -->
+        </ul>
         
     <script src="last5places.js"></script>
     </body>
