--- a/Day-02/last5sites/popup/last5places.html
+++ b/Day-02/last5sites/popup/last5places.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="UTF-8"> 
 <html>
+    <head>
+        <link href = "last5places.css" rel = "stylesheet" type = "text/css">
+    </head>
     <body>
         <ul id = "siteList" class = "siteListClass">
             <!-- List comes here -->
