Completed popup UI

--- a/Day-02/last5sites/popup/last5places.html
+++ b/Day-02/last5sites/popup/last5places.html
@@ -9,6 +9,6 @@
             <!-- List comes here -->
         </ul>
         
-    <script src="last5places.js"></script>
+        <script type = "text/javascript" src="last5places.js"></script>
     </body>
 </html>
