--- a/Day-04, 05/FontIncrease/popup/sizeinc.html
+++ b/Day-04, 05/FontIncrease/popup/sizeinc.html
@@ -16,7 +16,8 @@
                 <span class= "glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
         </div>
-    
+        
+        <script type = "text/javascript" src = "js/jquery.js"></script>
         <script type = "text/javascript" src = "js/sizeinc.js"></script>
         <script type = "text/javascript" src = "js/bootstrap.min.js"></script>
     </body>
