--- a/Day-04, 05/FontIncrease/popup/sizeinc.html
+++ b/Day-04, 05/FontIncrease/popup/sizeinc.html
@@ -11,7 +11,7 @@
             <button type = "button" id = "minus" class = "btn btn-default">
                 <span class="glyphicon glyphicon-minus" aria-hidden = "true"></span>
             </button>
-            <input type = "number" id = "textSize" class = "numBox" value = 0 max=6 min=-6>
+            <text type = "number" id = "textSize" class = "numBox">0</text>
             <button type = "button" id = "plus" class = "btn btn-default">
                 <span class= "glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
